# dnp3py

./: .gitignore  CLAUDE.md  README.md  __init__.py  pyproject.toml  setup.py  test_connection.py
.claude/: project_instructions.md
.github/workflows/: ci.yml  publish.yml
core/: __init__.py  config.py  exceptions.py  master.py
docs/: CONTEXT.md
examples/: __init__.py  async_example.py  basic_usage.py
layers/: __init__.py  application.py  datalink.py  transport.py
objects/: __init__.py  analog.py  binary.py  counter.py  groups.py
tests/: __init__.py  test_application.py  test_crc.py  test_datalink.py  test_objects.py  test_transport.py
utils/: __init__.py  crc.py  logging.py
